force-app/main/default/objects/Demo_Org_Wizard_Page_1__mdt/Demo_Org_Wizard_Page_1__mdt.object-meta.xml
<CustomObject>
    <label>Demo Org Wizard - Step 1 Field</label>
    <pluralLabel>Demo Org Wizard - Step 1 fields</pluralLabel>
</CustomObject>