force-app/main/default/objects/Demo_Org_Wizard_Page_1__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API Name of the Demo Org custom object field you would like to display in the New Demo Org Wizard - Page 1</description>
    <inlineHelpText>The API Name of the Demo Org custom object field you would like to display in the New Demo Org Wizard - Page 1</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>