force-app/main/default/objects/Demo_Org_Wizard_Page_1__mdt/fields/Field_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Display_Order__c</fullName>
    <description>The order that this Demo Org custom object field show be displayed in the Demo Org Wizard - Page 1</description>
    <inlineHelpText>The order that this field show be displayed in the Demo Org Wizard - Page 1</inlineHelpText>
    <label>Field Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>