force-app/main/default/objects/Demo_Org_Wizard_Page_1__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>The api type of the field. Select from one of the options.</description>
    <inlineHelpText>The api type of the field. Select from one of the options.</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>time</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>toggle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>